@startuml RealTimeAccessServiceComponent
' RealTimeAccessService_component.puml (DD-05: Performance Optimization)
' Tactic: Introduce Concurrency, Data Pre-Fetching, Encapsulate

package "Interface Layer" {
  interface IAccessControlApi
  interface IQRAccessApi
  
  component AccessControlController
  component QRAccessController
  
  IAccessControlApi -- AccessControlController
  IQRAccessApi -- QRAccessController
}

package "Business Layer" {
  interface IAccessAuthorizationService
  interface IGateControlService
  interface IAccessEventPublisher
  
  component AccessAuthorizationManager
  component GateController
  component FaceVectorCache
  component AccessEventProcessor
  
  IAccessAuthorizationService -- AccessAuthorizationManager
  IGateControlService -- GateController
  IAccessEventPublisher -- AccessEventProcessor
  
  ' Tactic: Data Pre-Fetching (DD-05)
  AccessAuthorizationManager ..( FaceVectorCache : <<warmUp>>
  AccessAuthorizationManager ..( IGateControlService : <<Local>>
  
  ' Tactic: Introduce Concurrency (Pipeline Optimization)
  note right of AccessAuthorizationManager
    **DD-05 Pipeline Optimization**
    1. Receive face photo from Equipment
    2. Extract features (parallel stage)
    3. IPC call to FaceModel Service
    4. Vector matching (parallel stage)
    5. Gate control decision
    
    Target: 3초 이내 출입 (QAS-02)
  end note
  
  AccessEventProcessor ..( IAccessAuthorizationService : <<Local>>
}

package "System Interface Layer" {
  interface IAccessVectorRepository
  interface IFaceModelServiceClient
  interface IEquipmentGateway
  interface IMessagePublisherService
  
  component VectorRepository
  component FaceModelServiceIPCClient
  component EquipmentGatewayAdapter
  component RabbitMQAdapter
  
  database VectorDatabase
  
  IAccessVectorRepository -- VectorRepository
  IFaceModelServiceClient -- FaceModelServiceIPCClient
  IEquipmentGateway -- EquipmentGatewayAdapter
  IMessagePublisherService -- RabbitMQAdapter
  
  VectorRepository ..( VectorDatabase : <<JDBC>>
}

' Package external connections (Interface Layer → Business Layer)
AccessControlController ..( IAccessAuthorizationService : <<HTTP>>
QRAccessController ..( IAccessAuthorizationService : <<HTTP>>

' Business Layer → System Interface Layer
FaceVectorCache ..( IAccessVectorRepository : <<JDBC>>
AccessAuthorizationManager ..( IFaceModelServiceClient : <<IPC/gRPC>>
GateController ..( IEquipmentGateway : <<HTTPS>>
AccessEventProcessor ..( IMessagePublisherService : <<RabbitMQ>>

note top of FaceVectorCache
  **Tactic: Data Pre-Fetching (DD-05)**
  - Startup: Load top 10K active face vectors
  - Runtime: LRU eviction (24h TTL)
  - Hit rate: >90% target
  - Memory: ~500MB (10K × 512 dims)
  - Removes DB I/O from hot path
end note

note bottom of FaceModelServiceIPCClient
  **Tactic: Same Physical Node (DD-05)**
  - IPC/gRPC for minimum latency
  - Shared memory optimization
  - No network overhead
  - calculateSimilarityScore() ~205ms
end note

@enduml
